--- a/docker/release/application-rel.yml
+++ b/docker/release/application-rel.yml
@@ -1,6 +1,6 @@
 application:
   title: D.Hub-Ingest-Manager
-  version: 1.1.3
+  version: 1.2.0
 
 spring:
   application:
@@ -69,3 +69,10 @@ http.pool:
   connection.request.timeout: 5000
   read.timeout: 10000
   validate.after.inactivity: 2000
+nifi:
+  version: 1.23.0
+  url: http://localhost:28008
+  user: admin
+  password: ctsBtRBKHRAx69EqUghvvgEvjnaLjFEB
+  template:
+    init: true
