--- a/src/main/resources/application-dtonic.yml
+++ b/src/main/resources/application-dtonic.yml
@@ -1,6 +1,6 @@
 application:
   title: D.Hub-Ingest-Manager
-  version: 1.1.3
+  version: 1.2.1
 
 spring:
   application:
@@ -78,9 +78,13 @@ http.pool:
   validate.after.inactivity: 2000
 
 nifi:
-  url: https://110.45.181.71:8443
+  version: 1.23.0
+  url: http://localhost:28008
   user: admin
   password: ctsBtRBKHRAx69EqUghvvgEvjnaLjFEB
-  version: 1.23.0
   template:
-    init: false
+    init: true
+  merge:
+    bulk.min.size: 10
+    bulk.max.size: 100
+    batch.interval: 1 # sec
